--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -240,8 +240,8 @@
         <h4 class="plugin_summary">CKEditor Plus</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_ckeditor</dt>
-            <dd class="plugin_version">Version 4.11.3.0 (GPL, Last Updated 2019-04-08)</dd>
-            <dd class="plugin_maintainers">Rustam Abdullaev, Ian</dd>
+            <dd class="plugin_version">Version 4.11.4.0 (GPL, Last Updated 2019-04-22)</dd>
+            <dd class="plugin_maintainers">Rustam Abdullaev, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.6.2</dd>
         </dl>
         <p class="plugin_description">Uses CKEditor as the default WYSIWYG editor. For any JS-Editor usage: Recommended! After installation, go to the configuration screen of this plugin for further instructions.</p>
@@ -512,7 +512,7 @@
         <h4 class="plugin_summary">Tagging of entries</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_freetag</dt>
-            <dd class="plugin_version">Version 4.23 (GPL, Last Updated 2019-04-08)</dd>
+            <dd class="plugin_version">Version 4.23 (GPL, Last Updated 2019-04-10)</dd>
             <dd class="plugin_maintainers">Garvin Hicking, Jonathan Arkell, Grischa Brockhaus, Lars Strojny, Malte Paskuda, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
@@ -740,7 +740,7 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.85 (GPL, Last Updated 2018-11-19)</dd>
+            <dd class="plugin_version">Version 1.85 (GPL, Last Updated 2019-04-10)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1676,7 +1676,7 @@
         <h4 class="plugin_summary">Event-Calendar</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cal</dt>
-            <dd class="plugin_version">Version 1.85 (GPL, Last Updated 2018-11-19)</dd>
+            <dd class="plugin_version">Version 1.85 (GPL, Last Updated 2019-04-10)</dd>
             <dd class="plugin_maintainers">Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
