--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -496,8 +496,8 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.67 (GPL, Last Updated 2019-02-09)</dd>
-            <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
+            <dd class="plugin_version">Version 5.68 (GPL, Last Updated 2019-04-30)</dd>
+            <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
         <p class="plugin_description">Shows static pages inside your blog with your blogs design and all formatting. Adds a new menu item to the admin interface.</p>
@@ -916,8 +916,8 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.67 (GPL, Last Updated 2019-02-09)</dd>
-            <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
+            <dd class="plugin_version">Version 5.68 (GPL, Last Updated 2019-04-30)</dd>
+            <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
         <p class="plugin_description">Shows static pages inside your blog with your blogs design and all formatting. Adds a new menu item to the admin interface.</p>
@@ -1788,8 +1788,8 @@
         <h4 class="plugin_summary">Static Pages</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_staticpage</dt>
-            <dd class="plugin_version">Version 5.67 (GPL, Last Updated 2019-02-09)</dd>
-            <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian, Don Chambers</dd>
+            <dd class="plugin_version">Version 5.68 (GPL, Last Updated 2019-04-30)</dd>
+            <dd class="plugin_maintainers">Marco Rinck, Garvin Hicking, David Rolston, Falk Doering, Stephan Manske, Pascal Uhlmann, Ian Styx, Don Chambers</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.1.0</dd>
         </dl>
         <p class="plugin_description">Shows static pages inside your blog with your blogs design and all formatting. Adds a new menu item to the admin interface.</p>
