site: Minor text improvements

--- a/about/index.html
+++ b/about/index.html
@@ -105,8 +105,8 @@
 
             <p>If this is too dark for you, you may read this as <strong>S</strong>erendipi<strong>ty</strong> Ne<strong>x</strong>t.
             :) or just <strong>Sty x</strong>.<br>
-            <em>Serendipity 2.1-Alpha ++</em> more and more became a broken playground, simplifying things without need and commits
-            without knowledge and appreciation about its deepest nuances. Which I regret deeply.</p>
+            By the time the real Maintainer began to silently retreat, <em>Serendipity 2.1-Alpha ++</em> more and more became a broken playground,
+            simplifying things without need and commits without care and appreciation about its deepest nuances. Which I regret deeply.</p>
 
             <p><strong>Styx</strong> is what <strong>Serendipity</strong> should be!</p>
 
