--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <div class="blog-post__content">
             <p>This site and blog is about the <strong>Serendipity Styx Edition</strong>. A fully regarded <strong>successor</strong> of Serendipity, the S9y-Origin.</p>
 
-            <p>Two years ago, in Spring 2016, after 5 years of heavy core and plugin development for Serendipity as a core developer,
+            <p>Years ago, in Spring 2016, after 5 years of heavy core and plugin development for Serendipity as a core developer,
             I decided to face the challenge of making my own system out of the Serendipity Blog System. That idea kicked
             off the development of <a href="https://github.com/ophian/styx">Styx</a> and my own and strongly maintained
             <a href="https://github.com/ophian/additional_plugins">additional_plugins</a> repository.</p>
