about: Fix typos

--- a/about/index.html
+++ b/about/index.html
@@ -118,13 +118,13 @@
 
             <h3 id="the-serendipity-styx-edition">The Serendipity Styx Edition</h3>
 
-            <p>Serendipity Styx  was built in my origin intent primarily for myself to keep track on my vision of what Serendipity used to be,
+            <p>Serendipity Styx was built in my origin intent primarily for myself to keep track on my vision of what Serendipity used to be,
             wide and open, and with multi levels of extended properties. I wanted it - to <strong>not</strong> cut off this
             extendibility without real need. Styx is a contributed document of my deep affinity with Serendipity.</p>
 
             <p>As long as I find the time and the commitment to make this even better, Styx will develop and will include all
             good parts of the origin Serendipity development. You may replace your origin Serendipity installation without any
-            fear with this extended Edition and you will find everything work as intendet. Go and read the <strong>Get Styx</strong>
+            fear with this extended Edition and you will find everything work as intended. Go and read the <strong>Get Styx</strong>
             <a href="/hc/en/installation.html#user-content-the-important-upgraders-howto---step-by-step-guide">‘install’ or ‘upgrade’</a>
             page to see how this can be easily done without too much effort.
             Even more you may want to read the <a href="https://github.com/ophian/styx/commits/master">commit history</a> and/or
