--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -676,8 +676,8 @@
         <h4 class="plugin_summary">DBClean</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_dbclean</dt>
-            <dd class="plugin_version">Version 0.3.1 (GPL, Last Updated 2018-07-05)</dd>
-            <dd class="plugin_maintainers">Malte Paskuda, Matthias Mees, Ian</dd>
+            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2019-05-06)</dd>
+            <dd class="plugin_maintainers">Malte Paskuda, Matthias Mees, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Cleanup database</p>
