--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -20,8 +20,8 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.5.6 (GPL, Last Updated 2018-09-07)</dd>
-            <dd class="plugin_maintainers">onli, Ian</dd>
+            <dd class="plugin_version">Version 1.5.7 (GPL, Last Updated 2019-05-25)</dd>
+            <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">When the Dashboard (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the blog directly with one click from within the adminarea. With Styx 2.1+ it is recommended to use it in combination with the modemaintain (maintenance-) event plugin.</p>
@@ -188,8 +188,8 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.5.6 (GPL, Last Updated 2018-09-07)</dd>
-            <dd class="plugin_maintainers">onli, Ian</dd>
+            <dd class="plugin_version">Version 1.5.7 (GPL, Last Updated 2019-05-25)</dd>
+            <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">When the Dashboard (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the blog directly with one click from within the adminarea. With Styx 2.1+ it is recommended to use it in combination with the modemaintain (maintenance-) event plugin.</p>
@@ -900,8 +900,8 @@
         <h4 class="plugin_summary">Serendipity Autoupdate</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_autoupdate</dt>
-            <dd class="plugin_version">Version 1.5.6 (GPL, Last Updated 2018-09-07)</dd>
-            <dd class="plugin_maintainers">onli, Ian</dd>
+            <dd class="plugin_version">Version 1.5.7 (GPL, Last Updated 2019-05-25)</dd>
+            <dd class="plugin_maintainers">onli, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">When the Dashboard (once a day) detects an update, this plugin adds the option to manually download or start an automatic and secured upgrade of the blog directly with one click from within the adminarea. With Styx 2.1+ it is recommended to use it in combination with the modemaintain (maintenance-) event plugin.</p>
