hc-spam: Add missing "..block later trackbacks too" option

--- a/hc/en/spam.html
+++ b/hc/en/spam.html
@@ -113,6 +113,7 @@
                                 <li><a href="#docs-force-captchas-after-x-days" id="toc-docs-force-captchas-after-x-days">Force Captchas after X days</a></li>
                                 <li><a href="#docs-background-color-of-the-captcha" id="toc-docs-background-color-of-the-captcha">Background color of the Captcha</a></li>
                                 <li><a href="#docs-time-frame-for-comments-within-x-days" id="toc-docs-time-frame-for-comments-within-x-days">Time frame for comments within X days</a></li>
+                                <li><a href="#docs-shall-this-time-frame-block-later-trackbacks-too" id="toc-docs-shall-this-time-frame-block-later-trackbacks-too">Shall this time frame block later trackbacks too?</a></li>
                                 <li><a href="#docs-force-comment-moderation-after-x-days" id="toc-docs-force-comment-moderation-after-x-days">Force comment moderation after X days</a></li>
                                 <li><a href="#docs-comments-classification-after-being-auto-moderated" id="toc-docs-comments-classification-after-being-auto-moderated">Comments classification after being auto-moderated?</a></li>
                                 <li><a href="#docs-force-trackback-moderation-after-x-days" id="toc-docs-force-trackback-moderation-after-x-days">Force trackback moderation after X days</a></li>
@@ -207,6 +208,10 @@
                     <h4 id="docs-force-comment-moderation-after-x-days">Force comment moderation after X days</h4>
 
                     <p>You can enable the comment moderation for each trackback and comment to an article here. Enter the amount of days after which an article will be put in “moderation” state.</p>
+
+                    <h4 id="docs-shall-this-time-frame-block-later-trackbacks-too">Shall this time frame block later trackbacks too?</h4>
+
+                    <p>Block and reject potentially valid Trackbacks/Pingbacks, which income to entries after this time frame closed. (Other option actions may influence this behaviour.)</p>
 
                     <h4 id="docs-comments-classification-after-being-auto-moderated">Comments classification after being auto-moderated?</h4>
 
