--- a/features/index.html
+++ b/features/index.html
@@ -300,7 +300,7 @@
     <div class="section-container footer-policy">
         <div class="row">
             <div class="col-xs-12 col-md-6">
-                <p class="footer-policy__rights">© 2016 - {{ 'now' | date: "%Y" }} Serendipity Styx Edition.</p>
+                <p class="footer-policy__rights">© 2016 - {{ site.time | date: '%Y' }} Serendipity Styx Edition.</p>
             </div>
             <div class="col-xs-12 col-md-6">
                 <ul class="footer-policy__menu">
