--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -240,7 +240,7 @@
         <h4 class="plugin_summary">CKEditor Plus</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_ckeditor</dt>
-            <dd class="plugin_version">Version 4.11.4.1 (GPL, Last Updated 2019-05-09)</dd>
+            <dd class="plugin_version">Version 4.12.1.0 (GPL, Last Updated 2019-07-03)</dd>
             <dd class="plugin_maintainers">Rustam Abdullaev, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.6.2</dd>
         </dl>
@@ -1528,8 +1528,8 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.75 (GPL, Last Updated 2019-05-12)</dd>
-            <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
+            <dd class="plugin_version">Version 1.76 (GPL, Last Updated 2019-07-01)</dd>
+            <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Allows to post/edit entries via the XML-RPC API (MT, Blogger, WordPress Endpoints)</p>
@@ -1920,8 +1920,8 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.75 (GPL, Last Updated 2019-05-12)</dd>
-            <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
+            <dd class="plugin_version">Version 1.76 (GPL, Last Updated 2019-07-01)</dd>
+            <dd class="plugin_maintainers">Serendipity Team, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Allows to post/edit entries via the XML-RPC API (MT, Blogger, WordPress Endpoints)</p>
