hc: Images API - deprecation of another old GD function naming
serendipity_functions_gd() => serendipity_functionsGD()

--- a/hc/en/functions.html
+++ b/hc/en/functions.html
@@ -190,7 +190,7 @@
                           <li><span class="var">serendipity_makeThumbnail</span>: Create a thumbnail for an image</li>
                           <li><span class="var">serendipity_generateThumbs</span>: Creates thumbnails for all images in the upload dir</li>
                           <li><span class="var">serendipity_syncThumbs</span>: Check all existing thumbnails if they are the right size, insert missing thumbnails</li>
-                          <li><span class="var">serendipity_functions_gd</span>: Wrapper for GDLib functions</li>
+                          <li><span class="var">[serendipity_functions_gd deprecated], serendipity_functionsGD</span>: Wrapper for GDLib functions</li>
                           <li><span class="var">[serendipity_calculate_aspect_size deprecated], serendipity_calculateAspectSize</span>: Calculate new size for an image, considering aspect ratio and constraint</li>
                           <li><span class="var">serendipity_displayImageList</span>: Display the list of images in our database</li>
                           <li><span class="var">serendipity_killPath</span>: Recursively delete a directory tree</li>
