--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -208,9 +208,9 @@
         <h4 class="plugin_summary">Amazon Media Button</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_amazonchooser</dt>
-            <dd class="plugin_version">Version 0.80 (GPL, Last Updated 2018-08-30)</dd>
+            <dd class="plugin_version">Version 0.81 (GPL, Last Updated 2019-07-13)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Adds a button to allow Amazon.com search which are insertable into your entry</p>
         <ul class="plugin_actions">
@@ -288,9 +288,9 @@
         <h4 class="plugin_summary">Coppermine Selector</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cpgselector</dt>
-            <dd class="plugin_version">Version 2.09 (GPL, Last Updated 2016-12-12)</dd>
+            <dd class="plugin_version">Version 2.10 (GPL, Last Updated 2019-07-13)</dd>
             <dd class="plugin_maintainers">Matthew Maude (modified by Jim Davies)</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Select images from a Coppermine gallery in new entries</p>
         <ul class="plugin_actions">
@@ -1708,9 +1708,9 @@
         <h4 class="plugin_summary">Frequently Asked Questions</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_faq</dt>
-            <dd class="plugin_version">Version 1.33 (GPL, Last Updated 2018-08-27)</dd>
+            <dd class="plugin_version">Version 1.40 (GPL, Last Updated 2019-07-13)</dd>
             <dd class="plugin_maintainers">Falk Doering, Ian</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Edit the Frequently Asked Question.</p>
         <ul class="plugin_actions">
@@ -2184,9 +2184,9 @@
         <h4 class="plugin_summary">Coppermine Selector</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_cpgselector</dt>
-            <dd class="plugin_version">Version 2.09 (GPL, Last Updated 2016-12-12)</dd>
+            <dd class="plugin_version">Version 2.10 (GPL, Last Updated 2019-07-13)</dd>
             <dd class="plugin_maintainers">Matthew Maude (modified by Jim Davies)</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
         <p class="plugin_description">Select images from a Coppermine gallery in new entries</p>
         <ul class="plugin_actions">
@@ -2636,7 +2636,7 @@
         <h4 class="plugin_summary">MimeTex/LaTeX TeX Interpreter</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_mimetex</dt>
-            <dd class="plugin_version">Version 1.5 (GPL, Last Updated 2018-08-17)</dd>
+            <dd class="plugin_version">Version 1.6 (GPL, Last Updated 2019-07-13)</dd>
             <dd class="plugin_maintainers">Matthew Groeninger</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 2.0</dd>
         </dl>
@@ -2644,7 +2644,7 @@
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_mimetex.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_mimetex">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_mimetex" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_mimetex" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_mimetex/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
