--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1428,8 +1428,8 @@
         <h4 class="plugin_summary">Show last modification date</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrylastmodified</dt>
-            <dd class="plugin_version">Version 1.11 (GPL, Last Updated 2018-12-08)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Ian</dd>
+            <dd class="plugin_version">Version 1.12 (GPL, Last Updated 2019-07-13)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Ian Styx</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
         <p class="plugin_description">Shows a message with the last modification date of an entry on the blogs frontpage. For not modified entries shows a message that says they are not modified.</p>
@@ -2729,18 +2729,18 @@
     </div>
 
     <div id="serendipity_event_vgwort" class="plugin">
-        <h4 class="plugin_summary">VG Wort (unofficial)</h4>
+        <h4 class="plugin_summary">VG Wort</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_vgwort</dt>
-            <dd class="plugin_version">Version 0.3.3 (GPL, Last Updated 2019-02-11)</dd>
-            <dd class="plugin_maintainers">Malte Paskuda</dd>
-            <dd class="plugin_requirements">Serendipity &gt;= 2.1</dd>
+            <dd class="plugin_version">Version 0.4 (GPL, Last Updated 2019-07-13)</dd>
+            <dd class="plugin_maintainers">Malte Paskuda, Thomas Hochstein</dd>
+            <dd class="plugin_requirements">Serendipity &gt;= 2.2.1</dd>
         </dl>
         <p class="plugin_description">Integrate VG Wort counters into your blog.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_vgwort.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_vgwort">GitHub</a></li>
-            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_vgwort" aria-label="Anchor" data-anchorjs-icon=""></a></li>
+            <li class="plugin_changelog"><a class="anchorjs-link" href="#serendipity_event_vgwort" aria-label="Anchor" data-anchorjs-icon=""></a><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_vgwort/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
