hc::faq: Extend with "multi" blogs

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -114,6 +114,8 @@
       <li><a href="#docs-how-do-i-install-serendipity" id="styx-toc-docs-how-do-i-install-serendipity">How do I install Serendipity?</a></li>
       <li><a href="#docs-what-system-requirements-does-serendipity-have" id="styx-toc-docs-what-system-requirements-does-serendipity-have">What system requirements does Serendipity have?</a></li>
       <li><a href="#docs-serendipity-asks-me-for-entering-data-to-a-database-but-when-i-enter-a-name-and-install-serendipity-it-tells-me-the-database-does-not-exist" id="styx-toc-docs-serendipity-asks-me-for-entering-data-to-a-database-but-when-i-enter-a-name-and-install-serendipity-it-tells-me-the-database-does-not-exist">Serendipity asks me for entering data to a database, but when I enter a name and install Serendipity it tells me the database does not exist</a></li>
+      <li><a href="#docs-is-it-possible-to-have-two-versions-of-the-same-blog" id="styx-toc-docs-is-it-possible-to-have-two-versions-of-the-same-blog">Is it possible to have two versions of the same blog with the same content (new entries in one appear on both), but with different themes, plugins, etc?</a></li>
+      <li><a href="#docs-is-it-possible-to-have-two-or-more-blogs-beside-my-home-site" id="styx-toc-docs-is-it-possible-to-have-two-or-more-blogs-beside-my-home-site">Is it possible to have two ore more blogs beside my home site?</a></li>
     </ul>
   </li>
   <li class="sub-toc"><a href="#docs-errorsproblems" id="styx-toc-docs-errorsproblems">Errors/Problems</a>
@@ -240,6 +242,25 @@
 
     <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
 </div>
+
+<h4 id="docs-is-it-possible-to-have-two-versions-of-the-same-blog">Is it possible to have two versions of the same blog with the same content (new entries in one appear on both), but with different themes, plugins, etc?</h4>
+
+<div>
+    <p>Yes, this is possible. There are various options for this via Smarty, embeddded blogs, embedded entries, differences by categories and categorytemplates, staticpage categories, two independent blogs, etc. It all depends on you needs in special.</p>
+
+    <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
+</div>
+
+<h4 id="docs-is-it-possible-to-have-two-or-more-blogs-beside-my-home-site">Is it possible to have two ore more blogs beside my home site?</h4>
+
+<div>
+    <p>Yes, this is possible too. You just have to make sure to <b>not</b> use <b>nested</b> blogs, inside each other. This will not work and is not supported!</p>
+
+    <p>You can have as much blogs as you like as siblings, beside each other; Homesite :: Blog1, Homesite:: Blog2 etc.. In the database you would give them a different prefix like sb1_ and sb2, ... It all is a matter of making sense or not and which is the easiest approach for your system.</p>
+
+    <span class="faq-up"><a class="navigator" href="#faq-top">top</a></span>
+</div>
+
 
 <h3 id="docs-errorsproblems">Errors/Problems</h3>
 
