hc::faq: Fix a typo

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -649,7 +649,7 @@ chmod('/path/to/your/serendipity/<code>serendipity_config_local.inc.php</code>',
 
         <h5 id="docs-what-is-bayes">What is Spamblock Bayes?</h5>
 
-        <p>Another event plugin called “Spamblock Bayes” is used to fight blog spam in last defense line, since ot has the most performance impact of all spamblock plugins!</p>
+        <p>Another event plugin called “Spamblock Bayes” is used to fight blog spam in last defense line, since it has the most performance impact of all spamblock plugins!</p>
 
         <p>This plugin installs a word rating mechanism, called the bayes gaussian filter, via a learning algorithm. Since it analyzes every comment word by word these word items are valuables; Nothing for “Spam”, better for “Ham”!</p>
 
