hc::faq: Extend the list in af2788e

--- a/hc/en/faq/index.html
+++ b/hc/en/faq/index.html
@@ -246,7 +246,7 @@
 <h4 id="docs-is-it-possible-to-have-two-versions-of-the-same-blog">Is it possible to have two versions of the same blog with the same content (new entries in one appear on both), but with different themes, plugins, etc?</h4>
 
 <div>
-    <p>Yes, this is possible. There are <b>various</b> options for this via Smarty sys API method calls, embedded blogs, embedded entries, blog differences by categories and categorytemplates, staticpage categories, entryproperties, Concept of "Sticky Posts", two independent blogs side by side, etc. It all depends on you needs in special.</p>
+    <p>Yes, this is possible. There are <b>various</b> options for this via Smarty (sys) API method calls, embedded blogs, embedded entries, blog differences by categories and categorytemplates, staticpages, staticpage categories, entryproperties, entryproperties and the Concept of "Sticky Posts", two independent blogs side by side, etc. It all depends on you needs in special.</p>
 
     <p>If you are skilled with PHP, it could be made easy so that you just embed entries of categories with a different template on the other section.</p>
 
